# securities-analysis

./: LICENSE  MANIFEST.in  README.md  history.tar.gz.00.REMOVED.git-id  history.tar.gz.01.REMOVED.git-id  history.tar.gz.02.REMOVED.git-id  history.tar.gz.03.REMOVED.git-id  history.tar.gz.04  history.tar.gz.04.REMOVED.git-id  history.tar.gz.05  history.tar.gz.05.REMOVED.git-id  history.zip.00.REMOVED.git-id  history.zip.01.REMOVED.git-id  history.zip.02.REMOVED.git-id  history.zip.03.REMOVED.git-id  history.zip.04  history.zip.04.REMOVED.git-id  history.zip.05  history.zip.05.REMOVED.git-id  pyproject.toml  setup.py
securitiesanalysis/: __init__.py  __main__.py  concurrent.py  history_update.py  regex_webscraper.py  securities_analysis.py  utilities.py
securitiesanalysis/data/: options.json
